--- a/index.Rmd
+++ b/index.Rmd
@@ -33,15 +33,19 @@ use_xaringan_extra(c("panelset", "tachyons"))
 <br>
 <br>
 
-## Is there (not) an effect of X on Y?
+.f2[Is there (not) an effect of X on Y?]
 
 --
 
-## What is the effect of X on Y?
+<br>
+
+.f2[What is the effect of X on Y?]
 
 --
 
-## Given two or more hypotheses, which is the most compatible with the data?
+<br>
+
+.f2[Given two or more hypotheses, which is the most compatible with the data?]
 
 ---
 
@@ -50,7 +54,7 @@ use_xaringan_extra(c("panelset", "tachyons"))
 --
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 $$
 \begin{aligned}
@@ -73,7 +77,7 @@ $$
 --
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 $$
 \begin{aligned}
@@ -88,7 +92,7 @@ $$
 # Statistical inference: two approaches to probability
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 <br>
 <br>
@@ -100,7 +104,7 @@ $$\huge P(d|H_0)$$
 ]
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 <br>
 <br>
@@ -116,7 +120,7 @@ $$\huge P(H|d)$$
 # Statistical inference: two approaches to probability
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 <br>
 <br>
@@ -132,7 +136,7 @@ What is the probability of the data $d$ assuming that the hypothesis $H_0$ is tr
 ]
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 <br>
 <br>
@@ -189,11 +193,47 @@ The ***p*-value** is the probability of finding a certain difference or a bigger
 
 # Intuitiveness
 
-.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
+.bg-washed-green.b--dark-green.ba.bw2.br2.shadow-5.ph2.mt3[
 
 A **Bayesian posterior probability distribution** tells you the probability that the estimated effect falls within a specific range of values.
 
 ]
+
+```{r posterior, echo=FALSE, fig.width=7, fig.height=4, out.width="800px", fig.retina=2, fig.align="center"}
+x <- seq(-50, 200, by = 0.01)
+y = dnorm(x, 75, 30)
+ggplot() +
+  aes(x, y) +
+  geom_ribbon(aes(x = x, ymin = 0, ymax = y), alpha = 0.3, fill = "#8970FF") +
+  geom_ribbon(aes(x = ifelse(x >= 15 & x <= 135, x, NA), ymin = 0, ymax = y), alpha = 0.4, fill = "#8970FF") +
+  geom_ribbon(aes(x = ifelse(x >= 45 & x <= 105, x, NA), ymin = 0, ymax = y), alpha = 0.7, fill = "#8970FF") +
+  geom_line(size = 2, colour = "#FFA70B") +
+  annotate(
+    "segment",
+    x = 75-30, xend = 75+30, y = 0.015, yend = 0.015,
+    arrow = arrow(ends = "both", angle = 90, length = unit(.2, "cm")),
+    size = 1
+  ) +
+  annotate("label", x = 75, y = 0.015, label = "68%") +
+  annotate(
+    "segment",
+    x = 75-60, xend = 75+60, y = 0.0175, yend = 0.0175,
+    arrow = arrow(ends = "both", angle = 90, length = unit(.2, "cm")),
+    size = 1
+  ) +
+  annotate("label", x = 75, y = 0.0175, label = "95%") +
+  annotate(
+    "segment",
+    x = 75-90, xend = 75+90, y = 0.02, yend = 0.02,
+    arrow = arrow(ends = "both", angle = 90, length = unit(.2, "cm")),
+    size = 1
+  ) +
+  annotate("label", x = 75, y = 0.02, label = "99.7 ≈ 100%") +
+  # scale_x_continuous(breaks = c(-4:4), labels = c("", expression(paste(-3, sigma)), expression(paste(-2, sigma)), expression(paste(-1, sigma)), expression(paste(mu)), expression(paste(+1, sigma)), expression(paste(+2, sigma)), expression(paste(+3, sigma)), "")) +
+  labs(
+    x = element_blank(), y = element_blank()
+  )
+```
 
 ---
 
@@ -210,6 +250,8 @@ A **Bayesian posterior probability distribution** tells you the probability that
 ---
 
 # LMER is based on an imaginary set of experiments
+
+.center[![](img/imaginary.jpg)]
 
 ---
 
@@ -370,6 +412,8 @@ class: right middle inverse
 
 # *In Baiulo veritas*
 
+<iframe src="https://seeing-theory.brown.edu/bayesian-inference/index.html#section3" style="border:none;" width="100%" height="100%">
+
 
 ---
 
@@ -404,3 +448,8 @@ class: right middle inverse
 * Reason 7: .green[BRMs] converge towards the true value in the long run, while .orange[LMERs] do not
 
 
+---
+
+class: center middle inverse
+
+# Questions?
